last scaling fixes. Make sure image-group doesn't go off-screen it's thin

--- a/src/assets/home.scss
+++ b/src/assets/home.scss
@@ -6,6 +6,7 @@
   width: 100%;
   padding-top: 24px;
   font-family: var(--font-geometric);
+  --mobile-max-width: 95vw;
 
   a, a:link, a:visited {
     text-decoration: none;
@@ -32,7 +33,7 @@
       left: 20px;
       right: 20px;
       bottom: 100px;
-      width: 100%;
+      max-width: 100%;
 
       > div {
         position: absolute;
@@ -97,9 +98,9 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: flex-start;
-      width: 100%;
 
-      max-width: calc((var(--tiles-item-width) * 3) + (2 * var(--tiles-item-col-gap)));
+      width: calc((var(--tiles-item-width) * 3) + (2 * var(--tiles-item-col-gap)));
+      max-width: var(--mobile-max-width);
       margin: 0 auto;
     }
 
@@ -108,6 +109,7 @@
         font-size: 27px;
         line-height: 1.1;
         width: 357px;
+        max-width: var(--mobile-max-width);
       }
     }
 
@@ -161,7 +163,7 @@
       height: var(--tiles-item-height);
       min-height: calc(var(--tiles-item-height) * 8 / 9);
       width: var(--tiles-item-width);
-      max-width: 95vw;
+      max-width: var(--mobile-max-width);
       padding: 24px;
       border-radius: 20px;
       background: linear-gradient(180deg, #2b2b2b 0%, #000000 100%);
